# foxi

./: .env  .gitignore  ONBOARDING_SPACING.md  README.md  app.json  global.css  package-lock.json  package.json  skills-lock.json
app/: _layout.tsx  index.tsx  language-selection.tsx  onboarding.tsx  sso-callback.tsx
constants/: auth-spacing.ts  home-spacing.ts  images.ts  language-selection-spacing.ts  learn-spacing.ts  lesson-spacing.ts  onboarding-spacing.ts  profile-spacing.ts  tab-navigation.ts
data/: languages.ts  lessons.ts  onboarding.ts  units.ts
hooks/: use-google-auth.ts  use-lesson-audio-output-routing.ts  use-lesson-transcript.ts  use-stream-audio-lesson.ts  use-teacher-speaking-mic-guard.ts  use-vision-agent.ts
lib/: api-base-url.ts  clerk-auth.ts  clerk-server-auth.ts  fonts.ts  home-data.ts  language-progress.ts  learn-data.ts  lesson-access.ts  lesson-audio-output.ts  lesson-conversation-progress.ts  lesson-screen-data.ts  profile-data.ts  stream-api.ts  stream-call-custom.ts  stream-lesson-custom.ts  stream-server.ts  stream.ts  vision-agent-api.ts  vision-agent-server.ts
prompts/: 03-onboarding-ui.md  04-authentication-ui.md  05-clerk.md  07-language-ui.md  10-home-ui.md  11-lesson-ui.md  13-stream-integration.md  19-profile-ui.md
store/: language-store.ts  learning-progress-store.ts
theme/: colors.ts  (+2 more)
vision-agent/: README.md  pyproject.toml
vision-agent/foxi_teacher/: __init__.py  agent.py  config.py  http_app.py  instructions.py  lesson_context_store.py  main.py
vision-agent/tests/: test_agent_context.py  test_instructions.py
(+86 files in other folders)
